--- a/Resources/translations/CmfTreeUi.en.yml
+++ b/Resources/translations/CmfTreeUi.en.yml
@@ -1,6 +1,7 @@
 tree_delete_node_confirmation: You are about to delete __NODE_ID__ and any children it may have. Are you sure?
 context_menu_edit_in_new: Edit in new window
 context_menu:
+    rename: Rename
     edit_in_new: Edit in new window
     cut: Cut
     paste_in: Paste in
